# pljit

./: .gitignore
pljit/: AST.cpp  AST.hpp  ASTBuilder.cpp  ASTBuilder.hpp  ASTDOTVisitor.cpp  ASTDOTVisitor.hpp  CMakeLists.txt  DOTVisitor.cpp  DOTVisitor.hpp  EvaluationContext.cpp  EvaluationContext.hpp  GenericDOTVisitor.cpp  GenericDOTVisitor.hpp  Lexer.cpp  Lexer.hpp  ParseTreeDOTVisitor.cpp  ParseTreeDOTVisitor.hpp  ParseTreeVisitor.hpp  Parser.cpp  Parser.hpp  PljitFunction.cpp  PljitFunction.hpp  Result.hpp  SourceCodeManagement.cpp  SourceCodeManagement.hpp  SymbolTable.cpp  SymbolTable.hpp  lang.hpp  main.cpp  pljit.cpp  pljit.hpp  symbol_id.hpp
pljit/ast/: AST.cpp  AST.hpp  ASTBuilder.cpp  ASTBuilder.hpp  ASTDOTVisitor.cpp  ASTDOTVisitor.hpp  ASTVisitor.hpp  SymbolTable.cpp  SymbolTable.hpp
pljit/code/: SourceCode.cpp  SourceCode.hpp  SourceCodeManagement.cpp  SourceCodeManagement.hpp
pljit/lex/: Lexer.cpp  Lexer.hpp
pljit/optimizations/: ConstantPropagation.cpp  ConstantPropagation.hpp  DeadCodeElimination.cpp  DeadCodeElimination.hpp  OptimizationPass.hpp
pljit/parse/: ParseTree.cpp  ParseTree.hpp  ParseTreeDOTVisitor.cpp  ParseTreeDOTVisitor.hpp  ParseTreeVisitor.hpp  Parser.cpp  Parser.hpp
pljit/util/: GenericDOTVisitor.cpp  GenericDOTVisitor.hpp  Result.hpp
test/: ASTOptimizationTests.cpp  ASTTests.cpp  CMakeLists.txt  LexerTests.cpp  ParserTests.cpp  PljitTests.cpp  SourceCodeManagementTests.cpp
test/utils/: CaptureCOut.cpp  CaptureCOut.hpp  assert_macros.hpp  ast_utils.cpp  ast_utils.hpp
